--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae - Claudia Martinez</title>
+</head>
+<body>
 
+    <h1>CURRICULUM VITAE CLAUDIA MARTINEZ</h1>
+    <hr>
+
+    <h2>PERSONAL DETAILS</h2>
+    <p>Residential Address: 123 Dreamland Street, 45987 Moema, BRAZIL</p>
+    <p>Mobile: +555 666 777</p>
+    <p>Date of Birth: 1 April 1980</p>
+    <p>Nationality: Brazilian</p>
+
+    <h2>CAREER OBJECTIVE</h2>
+    <p>To expand skills and experience within the marketing department of an international sports events company or association.</p>
+
+    <h2>EDUCATION HISTORY</h2>
+    <ul>
+        <li><strong>May 2006 – Current</strong> <i>University of Sao Paulo, Sao Paulo, BRAZIL</i> - <a href="http://www.fe.usp.br">http://www.fe.usp.br</a> Masters in International Marketing (Expected graduation: Oct 2007)</li>
+        <li><strong>Jan 2002 – Nov 2005</strong> <i>University of Sao Paulo, Sao Paulo, BRAZIL</i> - Bachelor of Business in Sports Management</li>
+        <li><strong>May 1999 – Feb 2001</strong> <i>Augusto Laranja High School, Sao Paulo, BRAZIL</i> - High School Certificate Equivalent</li>
+    </ul>
+
+    <h2>WORK EXPERIENCE</h2>
+    <h3>Responsibilities and achievements</h3>
+    <ul>
+        <li><strong>Jan 2006 – Current</strong> - Marketing Trainee at <a href="http://www.moemamkt.com.br">Moema Marketing, Sao Paulo BRAZIL</a> 
+            <ul>
+                <li>Developed marketing and promotional material for sporting events.</li>
+                <li>Coordinated in-house events for the annual Moema Sports Marketing Fair.</li>
+                <li>Attended Regional Conference ‘Sports Marketing in Brazil 2007’.</li>
+                <li>Increased readership of Moema Sports Magazine by 10% through promotional campaigns.</li>
+            </ul>
+        </li>
+        <li><strong>Jun 2006 – Sep 2006</strong> - Internship at <a href="http://www.artofmarketing.com">The Art of Marketing, Sao Paulo BRAZIL</a>
+            <ul>
+                <li>Assisted in copywriting, including press releases, radio and newspaper advertisements.</li>
+                <li>Conducted market research into client demographics.</li>
+                <li>Coordinated in-house internal marketing promotions.</li>
+                <li>Updated content of The Art of Marketing website.</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>COMMUNITY INVOLVEMENT & RECOGNISED ACHIEVEMENTS</h2>
+    <ul>
+        <li>2006: Selected as President of University Recreation and Sports Representative Council</li>
+        <li>2005/2007: Commendation for Academic Excellence – Head of Sports Marketing, SP University</li>
+        <li>2000 – 2006: Captained Flora Seju Tennis Team</li>
+        <li>2005: 1st place in the Flora Seju Regional Volleyball Championships</li>
+        <li>2003 – 2006: Chaired the Sao Paulo Sports Ball Coordination Committee</li>
+        <li>2003 – 2007: Volunteer – Fundraising for Amnesty International and the 40 Hour Famine</li>
+    </ul>
+
+    <h2>OTHER SKILLS AND CERTIFICATES</h2>
+    <h3>Computer Skills</h3>
+    <ul>
+        <li>Microsoft XP applications (Word, Excel, PowerPoint, Outlook, Access) – Advanced</li>
+        <li>Microsoft Office Document Imaging and Scanning – Advanced</li>
+        <li>Acrobat Reader 6.0 – Intermediate</li>
+        <li>Fidelio Front Office Systems 6.02 – Beginner</li>
+    </ul>
+
+    <h3>Language Skills</h3>
+    <ul>
+        <li>Portuguese – Native</li>
+        <li>French – Basic (reading and writing)</li>
+    </ul>
+
+    <h3>Others</h3>
+    <ul>
+        <li>St John’s Ambulance Senior First Aid Certificate - 2007</li>
+    </ul>
+
+    <h2>PERSONAL COMPETENCIES</h2>
+    <ul>
+        <li>Ability to work in a fast-paced environment to meet deadlines</li>
+        <li>Excellent oral and written communication with an exceptional attention to detail</li>
+        <li>Highly organized with a creative flair for project work</li>
+        <li>Enthusiastic self-starter who contributes well to the team</li>
+    </ul>
+
+    <h2>INTERESTS AND ACTIVITIES</h2>
+    <ul>
+        <li>Tennis, volleyball, surfing, pottery, graphic design</li>
+    </ul>
+
+    <h2>REFERENCES</h2>
+    <address>
+        <strong>Mr. Juan Maciel</strong><br>
+        Events Manager, Moema Marketing<br>
+        13 Sejuado Road, Moema 38280, Sao Paulo, BRAZIL<br>
+        Phone: +555 111 999<br>
+        Email: <a href="mailto:juanmaciel@moemamktg.br">juanmaciel@moemamktg.br</a>
+    </address>
+    <address>
+        <strong>Ms. Izabela Monteiro</strong><br>
+        Marketing Manager, The Art of Marketing<br>
+        98 Bonita Way, Moema 38280, Sao Paulo, BRAZIL<br>
+        Phone: +555 222 333<br>
+        Email: <a href="mailto:izabelam@artofmarketing.com">izabelam@artofmarketing.com</a>
+    </address>
+
+    <h2>Image</h2>
+    <img src="BTT.jpg" alt="Sample Image">
