--- a/index.html
+++ b/index.html
@@ -107,4 +107,4 @@
     </address>
 
     <h2>Image</h2>
-    <img src="https://media.gq.com/photos/5706adb3f325b48d09952654/16:9/w_2560%2Cc_limit/0911-GQ-FESC01.jpg" alt="Sample Image">
+    <img src="https://media.gq.com/photos/5706adb3f325b48d09952654/16:9/w_2560%2Cc_limit/0911-GQ-FESC01.jpg" 
