--- a/index.html
+++ b/index.html
@@ -107,4 +107,4 @@
     </address>
 
     <h2>Image</h2>
-    <img src="https://www.wwe.com/f/styles/wwe_large/public/all/2024/01/Fast_10072023RF_52583--7640f0c55ed8655dfceeb8f3d0a2c7b3.JPG" height="64" width="165" alt="Cena">
+    <img src="https://media.gq.com/photos/5706adb3f325b48d09952654/16:9/w_2560%2Cc_limit/0911-GQ-FESC01.jpg" height="64" width="165" alt="Cena">
