--- a/index.html
+++ b/index.html
@@ -109,10 +109,5 @@
     <h2>Image</h2>
     <img src="https://media.gq.com/photos/5706adb3f325b48d09952654/16:9/w_2560%2Cc_limit/0911-GQ-FESC01.jpg" height="64" width="165" alt="Cena">
 
-    <h2>HTML Validator</h2>
-    <a href="https://validator.w3.org/">
-        <img src="https://www.w3.org/Icons/valid-html401" alt="W3C HTML Validator">
-    </a>
-
-</body>
-</html>
+    <h2>Image</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSza5WBdY2AQH1YuWLd_zkzmwXDZceP9_ltBQ&s"  height="64" width="165" alt="Cena">
