--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </address>
 
     <h2>Image</h2>
-    <img src="https://media.gq.com/photos/5706adb3f325b48d09952654/16:9/w_2560%2Cc_limit/0911-GQ-FESC01.jpg" height="64" width="165" alt="Cena">
+    <img src="https://media.gq.com/photos/5706adb3f325b48d09952654/16:9/w_2560%2Cc_limit/0911-GQ-FESC01.jpg" height="64" width="165" alt="Simon Cowell">
 
     <h2>Image</h2>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSza5WBdY2AQH1YuWLd_zkzmwXDZceP9_ltBQ&s"  height="64" width="165" alt="Cena">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSza5WBdY2AQH1YuWLd_zkzmwXDZceP9_ltBQ&s"  height="64" width="165" alt="HTML Validator">
