--- a/m02/index.html
+++ b/m02/index.html
@@ -33,7 +33,7 @@
         <!-- Data Rows -->
         <tr>
             <td>Monday</td>
-            <td>Spinach Feta Pizza</td>
+            <td>Butter Chicken</td>
         </tr>
         <tr>
             <td>Tuesday</td>
@@ -65,4 +65,3 @@
 </html>
 
 </body>
-</html>
